--- a/10final.ipynb
+++ b/10final.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('iris.csv')\n",
+        "dataset = sns.load_dataset('iris')\n",
         "df = df.drop('Id', axis=1)\n",
         "df.columns = ('SL', 'SW', 'PL', 'PW', 'Species')"
       ],
