--- a/10final.ipynb
+++ b/10final.ipynb
@@ -276,7 +276,14 @@
     },
     {
       "cell_type": "code",
-      
+      "source": [
+        "fig, axis = plt.subplots(2,2)\n",
+        "sns.histplot(ax=axis[0,0], data=df, x='SL', hue='Species', element='poly', shrink=0.8, kde= True)\n",
+        "sns.histplot(ax=axis[0,1], data = df, x='SW', hue = 'Species', element = 'poly', shrink = 0.8, kde = True)\n",
+        "sns.histplot(ax=axis[1,0], data = df, x='PL', hue = 'Species', element = 'poly', shrink = 0.8, kde = True)\n",
+        "sns.histplot(ax=axis[1,1], data = df, x='PW', hue = 'Species', element = 'poly', shrink = 0.8, kde = True)\n",
+        "plt.show()"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
